# rust-axum-template

./: Cargo.toml  README.md
src/: error.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
